add deno helper

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,18 @@
 version: '3.6'
 services:
 
-  helper:
+  denohelper:
+    image: denoland/deno:alpine
+    networks:
+      - gitlab_ci_local
+
+  curlhelper:
     image: curlimages/curl:latest
     networks:
       - gitlab_ci_local
 
   runner1:
     image: gitlab/gitlab-runner:ubuntu
-    environment:
-      - XYZ=runner1
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock'
       - runner1cfg:/etc/gitlab-runner/
@@ -18,8 +21,6 @@ services:
 
   runner2:
     image: gitlab/gitlab-runner:ubuntu
-    environment:
-      - XYZ=runner2
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock'
       - runner2cfg:/etc/gitlab-runner/
@@ -39,13 +40,9 @@ services:
         letsencrypt['enable'] = false
         nginx['listen_port'] = 80
         nginx['listen_https'] = false
-        gitlab_rails['artifacts_path'] = "/mnt/ci/artifacts"
-        gitlab_ci['builds_directory'] = '/mnt/ci/builds'
     ports:
       - '15080:80'
     shm_size: '256m'
-    volumes:
-      - ./data/:/mnt/ci/
     networks:
       - gitlab_ci_local
     #    volumes:
