--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
 
   runner1:
     image: gitlab/gitlab-runner:ubuntu
+    restart: always
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock'
       - runner1cfg:/etc/gitlab-runner/
@@ -21,6 +22,7 @@ services:
 
   runner2:
     image: gitlab/gitlab-runner:ubuntu
+    restart: always
     volumes:
       - '/var/run/docker.sock:/var/run/docker.sock'
       - runner2cfg:/etc/gitlab-runner/
