--- a/.dotglci.yml
+++ b/.dotglci.yml
@@ -1,5 +1,5 @@
 # Env files to populate vars (if no value set) in workspace
-# Last will replace first etc.
+# Later declarations will replace first etc.
 env_files:
   - .env
   - .env.dev
@@ -14,19 +14,28 @@ env_files:
 # dotglci_manual will put it in pipeline variable, simulating manual run
 
 variables:
-  - variable_type: env_var
+  - key: EXAMPLE_SET_VALUE
+    variable_type: env_var
     masked: false
-    key: EXAMPLE_SET_VALUE
     value: |
       Multi line
       YAML
       Example
+
   - key: VAR_X
     masked: false
     variable_type: env_var
+
   - key: VAR_Y
     masked: true
     variable_type: env_var
+
   - key: VAR_Z
-    variable_type: file
+    variable_type: env_var
+
   - key: MY_ENV
+    variable_type: env_var
+
+  - key: MY_FILE
+    variable_type: file
+    path: ".gitignore"
