--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -3,7 +3,7 @@ tasks:
     init: |
       export DENO_INSTALL="/home/gitpod/.deno" 
       export PATH="$DENO_INSTALL/bin:$PATH" 
-      bash ./0deno-gitpod-install.sh
+      bash ./install/0deno-gitpod-install.sh
   - name: docker-status
     command: docker-compose ps
 
