--- a/package.json
+++ b/package.json
@@ -6,5 +6,9 @@
   "repository": "https://github.com/yonixw/dotglci.git",
   "author": "Yoni Water Man <yonixw@gmail.com>",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "scripts": {
+    "start": "bash ./linux-cli.sh",
+    "start:win": "todo"
+  }
 }
